PROJECT(discrete-normal-estimation)
 
#Required in DGtal
CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
set(CMAKE_CXX_STANDARD 11)
 
FIND_PACKAGE(DGtal REQUIRED)
INCLUDE_DIRECTORIES(${DGTAL_INCLUDE_DIRS})
LINK_DIRECTORIES(${DGTAL_LIBRARY_DIRS})
 
FIND_PACKAGE(Qt5 5.7.0 REQUIRED COMPONENTS Widgets)

ADD_EXECUTABLE(estimation estimation.cpp)

TARGET_LINK_LIBRARIES(estimation ${DGTAL_LIBRARIES} Qt5::Widgets)
